[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "worldkernels"
dynamic = ["version"]
description = "GPU-first world model simulation engine for serving learned world models (DiT, VAE) as interactive sessions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Soran Ghaderi", email = "soran.gdr.cs@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "world-model",
    "video-generation",
    "diffusion",
    "simulation",
    "gpu",
    "pytorch",
    "deep-learning",
    "inference",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0",
    "numpy",
    "pydantic>=2.0",
    "tyro>=0.8",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
    "einops>=0.7",
    "imageio>=2.30",
    "nvidia-ml-py>=12.0",
    "prometheus_client>=0.17",
]

[project.optional-dependencies]
cosmos = [
    "transformers>=4.40",
    "torchvision>=0.15",
    "diffusers>=0.30",
    "accelerate>=0.25.0",
    "lightning>=2.0",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "peft>=0.15",
    "attrs>=23.0",
    "fvcore>=0.1",
    "scipy>=1.10",
    "decord>=0.6",
    "h5py>=3.8",
    "sentencepiece>=0.2",
    "opencv-python>=4.8",
    "boto3>=1.30",
    "numpydantic>=1.0",
    "qwen-vl-utils>=0.0.10",
    "pytz",
    "loguru>=0.7",
    "wandb>=0.15",
    "lerobot>=0.5",
]
diffusion = [
    "diffusers>=0.35",
    "transformers>=4.49",
    "torchvision>=0.15",
    "accelerate>=0.25",
    "sentencepiece>=0.2",
    "ftfy>=6.0",
    "Pillow>=9.0",
]
quant = [
    "torchao>=0.5",
]
all = [
    "worldkernels[cosmos,diffusion,quant]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.0",
    "ruff>=0.6",
    "pre-commit>=3.6",
    "build>=1.2",
    "twine>=5.0",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs-api-autonav>=0.2.1",
    "mkdocstrings[python]>=0.18",
    "mike>=1.0.0",
    "tomli>=2.0.0",
    "pyyaml>=6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.0.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-blog-plugin>=0.1.0",
    "pymdown-extensions>=9.0",
    "mkdocs-autorefs",
    "mkdocs-minify-plugin>=0.3.0",
    "mkdocs-llmstxt>=0.5.0",
    "Pillow>=9.0.0",
]

[project.scripts]
worldkernels = "worldkernels.cli.main:app"

[project.entry-points."worldkernels.worlds"]
dummy = "worldkernels.worlds.dummy:DummyWorld"
dreamdojo = "worldkernels.worlds.dreamdojo:DreamDojoWorld"
generator_world = "worldkernels.worlds.base:GeneratorWorld"

[project.urls]
Homepage = "https://github.com/soran-ghaderi/worldkernels"
Documentation = "https://github.com/soran-ghaderi/worldkernels#readme"
Repository = "https://github.com/soran-ghaderi/worldkernels.git"
Changelog = "https://github.com/soran-ghaderi/worldkernels/blob/main/CHANGELOG.md"
Issues = "https://github.com/soran-ghaderi/worldkernels/issues"

[tool.setuptools_scm]
write_to = "worldkernels/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["worldkernels*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
    "template-projs-toberemoved",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "*.egg-info",
]
markers = [
    "gpu: requires a CUDA GPU (skip with -m 'not gpu')",
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["worldkernels/_version.py"]
force-exclude = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["worldkernels"]
combine-as-imports = true
